[gd_scene load_steps=20 format=2]

[ext_resource path="res://graphics/spaceman/backleg.png" type="Texture" id=1]
[ext_resource path="res://graphics/spaceman/spaceman.png" type="Texture" id=2]
[ext_resource path="res://graphics/spaceman/backarm.png" type="Texture" id=3]
[ext_resource path="res://graphics/spaceman/body.png" type="Texture" id=4]
[ext_resource path="res://graphics/spaceman/jetpack.png" type="Texture" id=5]
[ext_resource path="res://graphics/spaceman/frontleg.png" type="Texture" id=6]
[ext_resource path="res://graphics/spaceman/frontarm.png" type="Texture" id=7]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=9]
[ext_resource path="res://graphics/XRay.shader" type="Shader" id=10]
[ext_resource path="res://graphics/color.png" type="Texture" id=11]
[ext_resource path="res://graphics/xray.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Visual.gd" type="Script" id=13]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool hurt;
uniform vec4 hurtCol : hint_color;

void fragment() {
	if(hurt) {
		COLOR = vec4(hurtCol.rgb * 5.0, texture(TEXTURE, UV).a);
	} else {
		COLOR = texture(TEXTURE, UV);
	}
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/hurt = false
shader_param/hurtCol = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("frontleg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 52.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("backleg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -52.0, 0.0 ]
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 10 )
shader_param/mask = ExtResource( 12 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 20.0
height = 36.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17, 33 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="ref" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Visual" type="Node2D" parent="."]
material = SubResource( 2 )
script = ExtResource( 13 )
SpriteHeight = 43
FluxAmount = 0.2

[node name="jetpack" type="Sprite" parent="Visual"]
use_parent_material = true
position = Vector2( -25, 6 )
texture = ExtResource( 5 )

[node name="JetpackPos" type="Position2D" parent="Visual"]
position = Vector2( -25, 21 )

[node name="frontleg" type="Sprite" parent="Visual"]
use_parent_material = true
position = Vector2( 6, 28 )
texture = ExtResource( 6 )
offset = Vector2( 1.971, 4.956 )

[node name="frontarm" type="Sprite" parent="Visual"]
use_parent_material = true
position = Vector2( 14, 2 )
texture = ExtResource( 7 )
offset = Vector2( 5.701, -3.194 )

[node name="body" type="Sprite" parent="Visual"]
use_parent_material = true
position = Vector2( -3, -6 )
texture = ExtResource( 4 )

[node name="backleg" type="Sprite" parent="Visual"]
use_parent_material = true
position = Vector2( -10, 28 )
texture = ExtResource( 1 )
offset = Vector2( -1.851, 4.811 )

[node name="Gun" parent="Visual" instance=ExtResource( 9 )]
visible = false
use_parent_material = true
position = Vector2( 22, -6 )
rotation = -0.127409

[node name="backarm" type="Sprite" parent="Visual"]
use_parent_material = true
position = Vector2( -12, 5 )
texture = ExtResource( 3 )
offset = Vector2( -0.873, 7.037 )

[node name="DustPos" type="Position2D" parent="Visual"]
position = Vector2( -2, 42 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visual"]
anims/Walk = SubResource( 3 )

[node name="Tween" type="Tween" parent="Visual"]
repeat = true
playback/repeat = true

[node name="Xray" type="Sprite" parent="."]
visible = false
material = SubResource( 4 )
scale = Vector2( 420, 420 )
z_index = 100
texture = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="Xray"]
show_behind_parent = true
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 12 )

[node name="Tween" type="Tween" parent="Xray"]

[node name="Timer" type="Timer" parent="Xray"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -4 )
z_index = 1
shape = SubResource( 5 )

[node name="Hitzone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitzone"]
position = Vector2( -3, -9 )
shape = SubResource( 6 )

[node name="FlashTimer" type="Timer" parent="Hitzone"]
wait_time = 0.2

[node name="HitTimer" type="Timer" parent="Hitzone"]
wait_time = 0.5

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -2, 35 )

[node name="BounceCast" type="RayCast2D" parent="Node2D"]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="BounceCast2" type="RayCast2D" parent="Node2D"]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="BounceCast3" type="RayCast2D" parent="Node2D"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4
[connection signal="tween_all_completed" from="Visual/Tween" to="Visual" method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Xray/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hitzone" to="." method="_on_Hitzone_body_entered"]
[connection signal="timeout" from="Hitzone/FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="Hitzone/HitTimer" to="." method="_on_HitTimer_timeout"]
